fix: update swagger docs, auth.controller and service response
